--- a/po/et.po
+++ b/po/et.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-23 08:52+0200\n"
+"PO-Revision-Date: 2012-08-26 11:36+0200\n"
 "Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: et\n"
@@ -89,7 +89,7 @@ msgstr "Faili nimi:"
 
 #: ../data/ui/ask-rename.glade.h:7
 msgid "Apply this option to all existing files"
-msgstr "Sama toimingu teostamine kõigi failidega"
+msgstr "Sama toimingu rakendamine kõigile failidele"
 
 #: ../data/ui/ask-rename.glade.h:8
 msgid "_Skip"
@@ -638,10 +638,10 @@ msgid "Check to remember sort as folder setting rather than global one"
 msgstr ""
 "Kui see on märgistatud kasutatakse kausta seadeid globaalsete seadete asemel"
 
+# Mingle on otsetõlkes segusta.
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "Segusta faile ja kaustu"
+msgstr "Kaustasid ja faile koheldakse samamoodi"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
